# smart_car

./: README.md
LQ_ls2k301_Demo/Demo/: LQ_ADC_Demo.cpp  LQ_Atim_Pwm_Demo.cpp  LQ_Cam_Demo.cpp  LQ_Delay_Demo.cpp  LQ_Encoder_Demo.cpp  LQ_Gpio_In_Demo.cpp  LQ_Gpio_Out_Demo.cpp  LQ_Gtim_Pwm_Demo.cpp  LQ_Gyro_Demo.cpp  LQ_Motor_Demo.cpp  LQ_Other_Demo.cpp  LQ_Pwm_Demo.cpp  LQ_Servo_Demo.cpp  LQ_TCP_Demo.cpp  LQ_TFT_Demo.cpp  LQ_Timer_Demo.cpp  LQ_UDP_Demo.cpp  LQ_Uart_Demo.cpp  LQ_YOLO_Demo.cpp  LQ_demo.hpp
LQ_ls2k301_Demo/Driver/I2C_Drv/inc/: LQ_List_drv.h  LQ_MPU6050_drv.h
LQ_ls2k301_Demo/Driver/I2C_Drv/ko/: lq_i2c_dev.ko  lq_i2c_drv.ko
LQ_ls2k301_Demo/Driver/I2C_Drv/src/: LQ_util_drv.c
LQ_ls2k301_Demo/Driver/TFT18_Driver/inc/: TFT18_dri.h
LQ_ls2k301_Demo/Driver/TFT18_Driver/ko/: TFT18_dev.ko  TFT18_dri.ko
LQ_ls2k301_Demo/Libraries/Driver/: LQ_ATIM_PWM.cpp  LQ_GTIM_PWM.cpp  LQ_YOLO.cpp
LQ_ls2k301_Demo/Main/: CMakeLists.txt  build.sh  main.cpp  main.hpp
LQ_ls2k301_LIB_V1.1.1/: 关于V1.1.1库(必读).txt  历史版本更新记录.txt
LQ_ls2k301_LIB_V1.1.1/Driver/I2C_Drv/: LQ_I2C_ALL_DRV.c  Makefile
LQ_ls2k301_LIB_V1.1.1/Driver/I2C_Drv/src/: LQ_I2C_RDWR_drv.c  LQ_MPU6050_drv.c
LQ_ls2k301_LIB_V1.1.1/Libraries/APP/IMU/: LQ_I2C_MPU6050.cpp  LQ_I2C_MPU6050.hpp  LQ_SOFT_I2C_Gyro.cpp  LQ_SOFT_I2C_Gyro.hpp
LQ_ls2k301_LIB_V1.1.1/Libraries/Driver/: LQ_module_loader.cpp
LQ_ls2k301_LIB_V1.1.1/Main/: CMakeLists.txt  main.cpp
LQ_ls2k301_LIB_V1.1/Driver/I2C_Drv/: LQ_I2C_ALL_DEV.c
LQ_ls2k301_LIB_V1.1/Driver/I2C_Drv/inc/: LQ_I2C_ALL_DRV.h  LQ_I2C_RDWR_drv.h  LQ_ICM42605_drv.h  LQ_util_drv.h
LQ_ls2k301_LIB_V1.1/Driver/I2C_Drv/src/: LQ_ICM42605_drv.c  LQ_VL53_drv.c
LQ_ls2k301_LIB_V1.1/Driver/TFT18_Driver/: Makefile
LQ_ls2k301_LIB_V1.1/Driver/TFT18_Driver/inc/: hw_gpio.h
LQ_ls2k301_LIB_V1.1/Libraries/Driver/inc/: LQ_ATIM_PWM.hpp  LQ_HW_ADC.hpp
LQ_ls2k301_LIB_V1.1/Main/: build.sh  main.cpp  main.hpp
Loongson_2K300_301_LIB/: .gitignore
Loongson_2K300_301_LIB/docs/: Version.txt
Loongson_2K300_301_LIB/driver/I2C_Drv/inc/: LQ_I2C_ALL_DRV.h  LQ_VL53_drv.h  LQ_drv_common.h
Loongson_2K300_301_LIB/driver/I2C_Drv/src/: LQ_List_drv.c
Loongson_2K300_301_LIB/driver/IPS_ST7789_Driver/: Makefile
Loongson_2K300_301_LIB/driver/IPS_ST7789_Driver/ko/: IPS_ST7789_dev.ko  IPS_ST7789_dri.ko
Loongson_2K300_301_LIB/driver/TFT18_Driver/: Makefile
Loongson_2K300_301_LIB/driver/i2c_all_device/: scp_send.sh
Loongson_2K300_301_LIB/driver/i2c_vl53l0x_driver/: scp_send.sh
Loongson_2K300_301_LIB/example/inc/: lq_all_demo.hpp
Loongson_2K300_301_LIB/example/src/: 01_lq_gpio_basic_demo.cpp  02_lq_pwm_demo.cpp  04_lq_atim_pwm_demo.cpp  05_lq_encoder_pwm_demo.cpp  06_lq_canfd_demo.cpp  07_lq_ncnn_demo.cpp  09_lq_mpu6050_demo.cpp  10_lq_lsm6dsr_demo.cpp  11_lq_vl53l0x_demo.cpp  12_lq_udp_img_trans_demo.cpp  14_lq_icm42688_demo.cpp  PID_control_demo.cpp  PID_control_test.cpp  close_circle.cpp  close_circle_control.cpp  img_test.cpp  test_encoder_and_control.cpp
Loongson_2K300_301_LIB/libraries/app/: lq_app_inc.hpp  lq_i2c_vl53l0x.hpp
Loongson_2K300_301_LIB/libraries/app/gyro/: lq_i2c_mpu6050.hpp
Loongson_2K300_301_LIB/main/: CMakeLists.txt  main.cpp  text.txt  toolchaibun_path.cmake  toolchain_path.cmake  主程序.txt  更新日志.md
Loongson_2K300_301_LIB/server/: LQ_UDP_Camera_Receiver.cpp
driver/: scp_send_all.sh
example/inc/: circle.hpp  img.hpp  lq_all_demo.hpp  timer.hpp
example/src/: 12_lq_udp_img_trans_demo.cpp  PID_control.cpp  PID_control_test.cpp  circle.cpp  close_circle_control.cpp  img.cpp  img_test.cpp  spd_circle.cpp  test_encoder_and_control.cpp  timer.cpp  udp_receive.cpp
libraries/drv/src/: lq_timer.cpp  lq_udp_client.cpp
main/: .gitignore  build.sh  main.cpp  toolchaibun_path.cmake  toolchain_path.cmake
(+11 files in other folders)
